[package]
name = "euler_rust"
version = "0.1.0"
authors = ["Y.Tsutsui <yosuke.tsutsui@gmail.com>"]
edition = "2018"
description = "Solver for Project Euler"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
chrono = "0.4"
